fix: simple lint issues fixed